tests/error/comprehension_errors/guarded1.err
Error: Drop violation (at $FILE:13:21)
   | 
11 | @guppy(module)
12 | def foo(qs: list[tuple[bool, qubit]] @owned) -> list[qubit]:
13 |     return [q for b, q in qs if b]
   |                      ^ Variable `q` with non-droppable type `qubit` may be leaked
   |                        ...
   | 
13 |     return [q for b, q in qs if b]
   |                                 - if this expression is `False`

Guppy compilation failed due to 1 previous error
